[gd_scene load_steps=4 format=3 uid="uid://dfp1n02k4gpdd"]

[ext_resource type="Script" path="res://scripts/ui/battle/atp_slots/base/base_atp_slot_ui.gd" id="1_ks2ub"]
[ext_resource type="FontFile" uid="uid://cqgufl6eexceh" path="res://fonts/ubuntu/ubuntu-regular.ttf" id="1_w00ee"]

[sub_resource type="LabelSettings" id="LabelSettings_yjqmt"]
line_spacing = 0.0
font = ExtResource("1_w00ee")
font_size = 32
shadow_size = 0

[node name="AbstractATPSlot" type="Button"]
custom_minimum_size = Vector2(44, 51)
offset_right = 44.0
offset_bottom = 51.0
pivot_offset = Vector2(24, 27)
focus_mode = 0
toggle_mode = true
flat = true
script = ExtResource("1_ks2ub")

[node name="SpeedValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -64.5
offset_right = 18.5
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "10"
label_settings = SubResource("LabelSettings_yjqmt")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_atp_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_atp_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_atp_pressed"]
